IMPALA-2732: Timestamp formats with non-padded values

This changes alters the behavior of timestamp parsing to allow for
variable length input fields. Prior to this, single-character tokens
in timestamp format strings were interpreted literally and only allowed
single-digit values. Changing this behavior also makes it necessary to
disallow single-character tokens that are not followed by a separator.

Here are the benchmark results:

Parent change:

Machine Info: Intel(R) Core(TM) i7-6700 CPU @ 3.40GHz
ParseDate:            Function     Rate (iters/ms)          Comparison
----------------------------------------------------------------------
               BoostStringDate               1.143                  1X
                     BoostDate               1.091             0.9549X
                        Impala               15.17              13.27X

ParseTimestamp:       Function     Rate (iters/ms)          Comparison
----------------------------------------------------------------------
                     BoostTime               0.813                  1X
                        Impala               12.35              15.19X

ParseTimestampWithFormat:Function  Rate (iters/ms)          Comparison
----------------------------------------------------------------------
                 BoostDateTime              0.3959                  1X
               ImpalaTimeStamp               34.53              87.22X
             ImpalaTZTimeStamp               34.76               87.8X

This change:

Machine Info: Intel(R) Core(TM) i7-6700 CPU @ 3.40GHz
ParseDate:            Function     Rate (iters/ms)          Comparison
----------------------------------------------------------------------
               BoostStringDate               1.277                  1X
                     BoostDate               1.229              0.962X
                        Impala               16.83              13.17X

ParseTimestamp:       Function     Rate (iters/ms)          Comparison
----------------------------------------------------------------------
                     BoostTime              0.9074                  1X
                        Impala               15.01              16.54X

ParseTimestampWithFormat:Function  Rate (iters/ms)          Comparison
----------------------------------------------------------------------
                 BoostDateTime              0.4488                  1X
               ImpalaTimeStamp               37.41              83.35X
             ImpalaTZTimeStamp               37.39               83.3X

Change-Id: Ibd3bfc481cb647ae872e9d48d025ada3ab46746b
Reviewed-on: http://gerrit.cloudera.org:8080/1761
Reviewed-by: Marcel Kornacker <marcel@cloudera.com>
Tested-by: Internal Jenkins